# pipeline_audit_logger_mvp

./: README.md  pyproject.toml
src/pipeline_audit_logger/: cli.py  contract.py  loader.py  logger.py  writer.py
tests/: test_cli.py  test_contract.py  test_loader.py  test_logger.py  test_writer.py
