[project]
name = "pipeline-audit-logger"
version = "0.1.0"
description = "RADAR Service Utility #22 - Pipeline Audit Logger MVP"
requires-python = ">=3.10"

[project.scripts]
pipeline-audit-logger = "pipeline_audit_logger.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
